gloo-system/templates/gloo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gloo
  name: gloo
spec:
  host: gloo.apps.baloise.dev
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway-proxy
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - routerName: router
